Fixing: footers, navbar and insights
Fixed the responsivenss of footers and insights page, refactored the notification with flexbox

--- a/src/components/layout/Notify.css
+++ b/src/components/layout/Notify.css
@@ -93,7 +93,7 @@
 
 .notification-info-panel .notification-message .alertType {
     font-size: 20px;
-    color: red;
+    color: #17B978;
     font-weight: 600;
     background-color: rgb(247, 237, 232);
 }
